--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -209,6 +209,9 @@ h1 {
 }
 .wrapper {
   max-width: 900px;
+  border: 3px solid #ff69b4;
+  border-radius: 15px;
+  min-height: 100vh;
   margin: 0 auto;
 }
 .wrapper .module {
@@ -220,4 +223,10 @@ h1 {
   padding: 10px;
   border: 5px solid #ff69b4;
   border-radius: 15px;
+}
+@media (min-width: 639px) {
+  .wrapper .module {
+    width: 50%;
+    float: left;
+  }
 }
