Gulp online - watch & stylus :peach: :melon: :melon:

--- a/styles/vars.styl
+++ b/styles/vars.styl
@@ -1,4 +1,4 @@
-$max-width = 900px
+$max-width = 1200px
 
 $red = hotpink
 
@@ -7,3 +7,4 @@ $red = hotpink
 
 $mobile = 639px
 $tablet = 959px
+$desktop = 1024px
