--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -82,7 +82,6 @@ figure {
   margin: 1em 40px;
 }
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
@@ -134,8 +133,6 @@ input[type=number]::-webkit-outer-spin-button {
 }
 input[type=search] {
   -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type=search]::-webkit-search-cancel-button,
@@ -189,8 +186,6 @@ textarea {
 *,
 *:before,
 *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 img {
@@ -208,8 +203,8 @@ h1 {
   text-align: center;
 }
 .wrapper {
-  max-width: 900px;
-  border: 3px solid #ff69b4;
+  max-width: 1200px;
+  border: 5px solid #ff69b4;
   border-radius: 15px;
   min-height: 100vh;
   margin: 0 auto;
@@ -221,12 +216,18 @@ h1 {
 .wrapper .module .module-container {
   margin: 0 auto;
   padding: 10px;
-  border: 5px solid #ff69b4;
-  border-radius: 15px;
+  border: 3px solid #ff69b4;
+  border-radius: 12px;
 }
-@media (min-width: 639px) {
+@media (min-width: 959px) {
   .wrapper .module {
     width: 50%;
+    float: left;
+  }
+}
+@media (min-width: 1024px) {
+  .wrapper .module {
+    width: 33%;
     float: left;
   }
 }
