mins seconds prediction and refactoring js :koala::herb:

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -211,7 +211,7 @@ h1 {
 }
 .wrapper .module {
   width: 100%;
-  padding: 25px 5%;
+  padding: 25px;
 }
 .wrapper .module .module-container {
   margin: 0 auto;
@@ -222,12 +222,6 @@ h1 {
 @media (min-width: 959px) {
   .wrapper .module {
     width: 50%;
-    float: left;
-  }
-}
-@media (min-width: 1024px) {
-  .wrapper .module {
-    width: 33%;
     float: left;
   }
 }
