--- a/styles/responsive.styl
+++ b/styles/responsive.styl
@@ -3,7 +3,7 @@
 		width 50%
 		float left
 		
-@media (min-width $desktop)
-	.wrapper .module
-		width 33%
-		float left
+// @media (min-width $desktop)
+// 	.wrapper .module
+// 		width 33%
+// 		float left
