less ghetto hourly graph :whale2::ocean:

--- a/styles/responsive.styl
+++ b/styles/responsive.styl
@@ -1,7 +1,7 @@
-@media (min-width $tablet)
-	.wrapper .module
-		width 50%
-		float left
+// @media (min-width $tablet)
+// 	.wrapper .module
+// 		width 50%
+// 		float left
 		
 // @media (min-width $desktop)
 // 	.wrapper .module
