--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -203,7 +203,7 @@ h1 {
   text-align: center;
 }
 .wrapper {
-  max-width: 1200px;
+  max-width: 1400px;
   border: 5px solid #ff69b4;
   border-radius: 15px;
   min-height: 100vh;
@@ -219,34 +219,12 @@ h1 {
   border: 3px solid #ff69b4;
   border-radius: 12px;
 }
-.wrapper .module .module-container #graph {
-  width: 100%;
-  padding: 5px;
-  position: relative;
+.wrapper .module .module-container .graph-container {
+  margin: 20px auto;
+  min-width: 100px;
+  height: 250px;
 }
-.wrapper .module .module-container #graph .cell {
-  width: 9.5%;
-  display: inline-block;
-  height: 10px;
-  margin: 10px 0;
-  border: 1px solid #ff69b4;
-  background-color: #007900;
-  border-radius: 5px 5px 0 0;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-.wrapper .module .module-container #graph .cell .data {
-  position: absolute;
-  bottom: 0;
-}
-.wrapper .module .module-container #graph .cell .data p {
-  font-size: 1.3rem;
-  text-align: center;
-}
-@media (min-width: 959px) {
-  .wrapper .module {
-    width: 50%;
-    float: left;
-  }
+.wrapper .module .module-container .weather-report {
+  float: left;
+  width: 50%;
 }
