--- a/styles/base.styl
+++ b/styles/base.styl
@@ -8,6 +8,9 @@
 	.module
 		width 100%
 		padding 25px;
+		
+		h2 
+			display inline-block
 
 		.module-container
 			margin 0 auto;
@@ -23,3 +26,10 @@
 			.weather-report
 				float left
 				width 50%
+	
+	.spinner
+		display inline-block
+		width 32px
+		height 32px
+		background-image url("../images/loading.gif")
+	
