--- a/styles/responsive.styl
+++ b/styles/responsive.styl
@@ -1,9 +1,6 @@
-// @media (min-width $tablet)
-// 	.wrapper .module
-// 		width 50%
-// 		float left
+@media (min-width $desktop)
+
+	.wrapper .module, .weather-report
 		
-// @media (min-width $desktop)
-// 	.wrapper .module
-// 		width 33%
-// 		float left
+		width 50%
+		float left
