tooltip on chartist bruh :chart_with_upwards_trend:

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -240,3 +240,16 @@ h1 {
     float: left;
   }
 }
+.ct-chart {
+  position: relative;
+}
+.ct-chart .tooltip {
+  position: absolute;
+  text-align: center;
+  background: #ff69b4;
+  border-radius: 50%;
+}
+.ct-chart .tooltip .tooltip-temp {
+  font-size: 22px;
+  color: #fff;
+}
