--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -209,9 +209,12 @@ h1 {
   min-height: 100vh;
   margin: 0 auto;
 }
+.wrapper h1 {
+  margin: 5px 0;
+}
 .wrapper .module {
   width: 100%;
-  padding: 25px;
+  padding: 5px 0;
 }
 .wrapper .module h2 {
   display: inline-block;
@@ -222,7 +225,6 @@ h1 {
   border: 3px solid #ff69b4;
   border-radius: 12px;
 }
-.wrapper .module .module-container .graph-container,
 .wrapper .module .module-container .weather-report {
   float: left;
   width: 100%;
@@ -233,11 +235,18 @@ h1 {
   height: 32px;
   background-image: url("../images/loading.gif");
 }
+.ttc .predictions .prediction-container {
+  float: left;
+  width: 50%;
+}
 @media (min-width: 1024px) {
   .wrapper .module,
   .weather-report {
     width: 50%;
     float: left;
+  }
+  .wrapper .module {
+    padding: 25px;
   }
 }
 .ct-chart {
