--- a/styles/base.styl
+++ b/styles/base.styl
@@ -4,10 +4,13 @@
 	border-radius 15px
 	min-height 100vh
 	margin 0 auto
+	
+	h1
+		margin 5px 0
 
 	.module
 		width 100%
-		padding 25px;
+		padding 5px 0
 		
 		h2 
 			display inline-block
@@ -17,9 +20,6 @@
 			padding 10px
 			border 3px solid $red
 			border-radius 12px
-			
-			.graph-container
-
 			
 			.weather-report
 				float left
